<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LobbyActivity">

    <TextView
        android:id="@+id/textView_LobbyActivity_lobbyID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Activity"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toEndOf="@+id/imageView_LobbyActivity_activityIcon" />

    <EditText
        android:id="@+id/editText_LobbyActivity_chatDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="   Enter your message here"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline43" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11">

        <ListView
            android:id="@+id/listView_LobbyActivity_chatLog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView_LobbyActivity_activityIcon"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_action_directions_run"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/button_LobbyActivity_enter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Enter"
        android:textColor="@color/blackColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editText_LobbyActivity_chatDialog"
        app:layout_constraintEnd_toEndOf="@+id/editText_LobbyActivity_chatDialog"
        app:layout_constraintTop_toTopOf="@+id/editText_LobbyActivity_chatDialog" />

    <Button
        android:id="@+id/button_LobbyActivity_guestList"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:background="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="List"
        android:textColor="@color/blackColor"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_LobbyActivity_lobbyDetail"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:layout_marginEnd="4dp"
        android:background="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Detail"
        android:textColor="@color/blackColor"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_LobbyActivity_guestList"
        app:layout_constraintEnd_toStartOf="@+id/button_LobbyActivity_guestList" />

    <Button
        android:id="@+id/button_LobbyActivity_promotion"
        android:layout_width="48dp"
        android:layout_height="33dp"
        android:layout_marginEnd="4dp"
        android:background="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Promo"
        android:textAlignment="center"
        android:textColor="@color/blackColor"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_LobbyActivity_lobbyDetail"
        app:layout_constraintEnd_toStartOf="@+id/button_LobbyActivity_lobbyDetail" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</android.support.constraint.ConstraintLayout>