...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LobbyDetailActivity">

    <TextView
        android:id="@+id/textView_ActivityLobbyDetail_maximumCapacity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
...
        android:layout_height="0dp"
        android:fontFamily="@font/cabin"
        android:text="Activity"
        android:textAlignment="textStart"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_ActivityLobbyDetail_activity"
        app:layout_constraintStart_toStartOf="@+id/guideline36" />

    <TextView
        android:id="@+id/textView_ActivityLobbyDetail_activity"
        android:layout_width="0dp"
        android:layout_height="38dp"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline31"
        app:layout_constraintTop_toTopOf="@+id/guideline27" />

    <TextView
        android:id="@+id/textView_ActivityLobbyDetail_host"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="@+id/guideline31"
        app:layout_constraintTop_toTopOf="@+id/guideline40" />

    <TextView
        android:id="@+id/textView_ActivityLobbyDetail_description"
        android:layout_width="215dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textAlignment="textStart"
...
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toTopOf="@+id/guideline39" />

    <Button
        android:id="@+id/button_ActivityLobbyDetail_editLobby"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Edit Lobby"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_ActivityLobbyDetail_returnToLobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

    <Button
        android:id="@+id/button_ActivityLobbyDetail_returnToLobby"
...
