<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".EditLobbyActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/backgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <TextView
        android:id="@+id/textView_EditLobbyActivity_descTAG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin"
        android:text="Description"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <TextView
        android:id="@+id/textView_EditLobbyActivity_capacityTAG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin"
        android:text="Capacity"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <TextView
        android:id="@+id/textView_EditLobbyActivity_privateLobbyTAG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin"
        android:text="Lobby Status"
        android:textColor="@color/blackColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <EditText
        android:id="@+id/editText_EditLobbyActivity_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="180"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toBottomOf="@+id/textView_EditLobbyActivity_descTAG" />

    <EditText
        android:id="@+id/editText_EditLobbyActivity_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_EditLobbyActivity_capacityTAG"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintStart_toEndOf="@+id/textView_EditLobbyActivity_capacityTAG" />

    <Button
        android:id="@+id/button_EditLobbyActivity_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Save"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline28" />

    <Button
        android:id="@+id/button_EditLobbyActivity_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Cancel"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textColor="@color/blackColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/guideline28" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <RadioGroup
        android:id="@+id/radioGroup_EditLobbyActivity_lobbyType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline22"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:layout_constraintTop_toBottomOf="@+id/textView_EditLobbyActivity_privateLobbyTAG">

        <RadioButton
            android:id="@+id/radioButton_EditLobbyActivity_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/cabin"
            android:text="Public"
            android:textColor="@color/blackColor"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_EditLobbyActivity_privateLobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/cabin"
            android:text="Private"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_EditLobbyActivity_privateLobbyTAG"
            app:layout_constraintStart_toEndOf="@+id/textView_EditLobbyActivity_privateLobbyTAG" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</android.support.constraint.ConstraintLayout>